{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "18c72b99-0272-4c85-8a28-a753c8e45f73",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "3137210f-f6ef-4e6b-8707-45159a60a81e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5e1881b2-6c78-44f8-bca7-037c96fcdc73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "7ae5b5e2-dca2-4b79-b46b-ce655c0acced",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Att",
                    "type": "Button",
                    "id": "f5ce25c1-94e9-4d26-9e09-3c08800b59f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Att2",
                    "type": "Button",
                    "id": "b599b056-65b1-405a-8ba7-1b7a0ce87ea8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchNext",
                    "type": "Button",
                    "id": "ed402a48-c795-42fe-80e4-72b6569c0206",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchPrevious",
                    "type": "Button",
                    "id": "ba0144ad-578b-4c65-87e8-dc3b21ca4bef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1be8e70-e8d8-45c5-be21-c58462783a0a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef33f0ff-7a60-435e-9352-dfbffb0bb938",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "344386d3-1d88-471f-af37-f9ba81182de5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52ee6493-b5bf-4aab-9d25-5b7843b4ee1a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Att",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aca4d2c9-1d5a-4d22-a2e6-08daafab2df3",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Att2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4122eb49-2907-4ea9-b949-12ef15efe4cd",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29cf5773-7d8d-440b-8672-594ba481c3bf",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}